# simple_walker_algorithm

./: CMakeLists.txt  LICENSE.txt  package.xml  readme.md
include/: walker.h
launch/: simpleWalker.launch
result/: cppcheck_result.txt
src/: main.cpp  walker.cpp
