<?xml version="1.0"?>
<package format="2">
  <name>simple_walker_algorithm</name>
  <version>0.0.0</version>
  <description>The simple_walker_algorithm package</description>

  <maintainer email="Dexter.ChienTeLee@gmail.com">Chien-Te Lee</maintainer>
  <author email="Dexter.ChienTeLee@gmail.com">Chien-Te Lee</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
